--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="byIngredient">Search By Ingredient</string>
     <string name="weeklyPlanner">Weekly Planner</string>
     <string name="instructions">Instructions</string>
+    <string name="ingredients">Ingredients:</string>
+    <string name="addToFav">Add to Fav</string>
 </resources>
