--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="instructions">Instructions</string>
     <string name="ingredients">Ingredients:</string>
     <string name="addToFav">Add to Fav</string>
+    <string name="rmFromFavShort">Rm From Fav</string>
 </resources>
