--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="ingredients">Ingredients:</string>
     <string name="addToFav">Add to Fav</string>
     <string name="rmFromFavShort">Rm From Fav</string>
+    <string name="country">Country</string>
+    <string name="ingredient">Ingredient</string>
+    <string name="category">Category</string>
 </resources>
