--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="country">Country</string>
     <string name="ingredient">Ingredient</string>
     <string name="category">Category</string>
+    <string name="mealName">Meal Name</string>
 </resources>
